--- a/views/min_login.html
+++ b/views/min_login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1" />
     <link rel="stylesheet" href="/css/amazeui.min.css">
     <link rel="stylesheet" href="/css/app.css">
     <!--[if lt IE 9]>
@@ -47,13 +47,13 @@
             </div>
             <div class="am-form-group am-form-icon">
                 <i class="am-icon-code am-icon-fw"></i>
-                <input type="password" class="am-form-field am-round am-input-lg" id="doc-ipt-pwd-1" placeholder="请输入验证码">
+                <input type="text" class="am-form-field am-round am-input-lg" id="doc-ipt-pwd-1" placeholder="请输入验证码">
                 <a class="fish-get-code">获取验证码</a>
             </div>
         </form>
     </div>
-    <div class="am-u-10 am-u-offset-1 am-margin-top">
-        <button type="button" class="am-btn am-btn-fish-confirm am-btn-lg am-round am-u-12">确定</button>
+    <div class="am-u-10 am-u-offset-1 am-margin-vertical">
+        <button type="button" class="am-btn am-btn-fish-confirm am-btn-lg am-round am-u-12 am-margin-bottom-lg">确定</button>
     </div>
 </div>
 </body>
