--- a/views/applynew.html
+++ b/views/applynew.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <meta name="viewport"
+          content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1"/>
+    <link rel="stylesheet" href="/css/bootstrapChange.min.css"/>
     <link rel="stylesheet" href="/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="/css/contacter-applynew.css"/>
     <script type="text/javascript" src="/js/jquery.min.js"></script>
@@ -34,6 +35,7 @@
         </div>
         <div class="col-xs-14 text-left fish-contacter-user-info-content">
             <p>王小军</p>
+
             <p>3636363636666564160</p>
         </div>
     </div>
@@ -58,7 +60,7 @@
             <span>详细地址<i>*</i></span>
         </div>
         <div class="col-xs-14">
-            <input class="fish-apply-input col-xs-20" placeholder="请输入你的详细居住地址" />
+            <input class="fish-apply-input col-xs-20" placeholder="请输入你的详细居住地址"/>
         </div>
     </div>
     <div class="row fish-contacter-row">
@@ -66,7 +68,7 @@
             <span>公司/职业<i>*</i></span>
         </div>
         <div class="col-xs-14">
-            <input class="fish-apply-input  col-xs-20" placeholder="向其他联络员介绍你自己" />
+            <input class="fish-apply-input  col-xs-20" placeholder="向其他联络员介绍你自己"/>
         </div>
     </div>
 
@@ -85,7 +87,7 @@
                     <span>所属俱乐部</span>
                 </div>
                 <div class="col-xs-11 text-right ">
-                    <input class="fish-apply-input col-xs-20" placeholder="" />
+                    <input class="fish-apply-input col-xs-20" placeholder=""/>
                 </div>
             </div>
         </div>
@@ -107,10 +109,9 @@
         </div>
     </div>
     <div>
-        <button type="button"
-                class="btn fish-btn-confirm btn-lg btn-block btn-primary col-md-10 col-md-offset-1 fish-margin-vertical"
-                data-toggle="modal" data-target="#myModal">确定
-        </button>
+        <a class="btn fish-btn-confirm btn-lg btn-block  fish-margin-vertical"
+           href="javascript:;">确定
+        </a>
 
     </div>
 </div>
