--- a/views/statusReadyContacter.html
+++ b/views/statusReadyContacter.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1"/>
+    <meta name="viewport"
+          content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="/css/contacter.css"/>
@@ -25,22 +26,24 @@
         </a>
     </h1>
 </header>
-<!--申请信息-->
-<div class="row " >
-    <div class="col-xs-10 col-xs-offset-1 text-center fish-apply-statusbg">
-        <span class="glyphicon glyphicon-ok-sign fish-icon fish-icon-success" aria-hidden="true"></span>
-        <p>您已通过审核成为&nbsp钓天下&nbsp预备联络员</p>
-    </div>
-</div>
-<div class="row " >
-    <div class="col-xs-10 col-xs-offset-1 text-center">
-        <p class="fish-greycolor-text">预备联络员只可查看当前联络员工作情况，<br />不可行使联络员职能</p>
-    </div>
-</div>
-<div class="row">
-    <button type="button" class="col-xs-10 btn-lg col-xs-offset-1 fish-applybtn" >进入联络员主页</button>
-</div>
+<!--通过审核成为预备联络员-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1 text-center fish-apply-statusbg">
+            <span class="glyphicon glyphicon-ok-sign fish-icon fish-icon-success" aria-hidden="true"></span>
 
+            <p>您已通过审核成为&nbsp钓天下&nbsp预备联络员</p>
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-xs-11 col-xs-offset-1 text-center">
+            <p class="fish-greycolor-text">预备联络员只可查看当前联络员工作情况，<br/>不可行使联络员职能</p>
+        </div>
+    </div>
+    <div class="row">
+        <a class="col-xs-10 btn-lg col-xs-offset-1 fish-applybtn">进入联络员主页</a>
+    </div>
+</div>
 
 </body>
 </html>
