--- a/views/statusSuccess.html
+++ b/views/statusSuccess.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1"/>
+    <meta name="viewport"
+          content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="/css/contacter.css"/>
@@ -26,16 +27,18 @@
     </h1>
 </header>
 <!--申请信息-->
-<div class="row " >
-    <div class="col-xs-10 col-xs-offset-1 text-center fish-apply-statusbg">
+<div class="container-fluid">
+    <div class="row ">
+        <div class="col-xs-10 col-xs-offset-1 text-center fish-apply-statusbg">
             <span class="glyphicon glyphicon-ok-sign fish-icon fish-icon-success" aria-hidden="true"></span>
+
             <p>恭喜你已通过联络员审核</p>
+        </div>
+    </div>
+    <div class="row">
+        <a href="javascript:;" class="col-xs-10 btn-lg col-xs-offset-1 fish-applybtn">进入联络员主页</a>
     </div>
 </div>
-<div class="row">
-        <button type="button" class="col-xs-10 btn-lg col-xs-offset-1 fish-applybtn" >进入联络员主页</button>
-</div>
-
 
 </body>
 </html>
