状态结果页与申请页进行统一； 新页面-0415

--- a/public/css/contacter-applynew.css
+++ b/public/css/contacter-applynew.css
@@ -116,7 +116,7 @@ body, html {
 .btn-lg {
     border-radius: 30px;
 }
-
+/*申请联络员页面*/
 .fish-contacter-row {
     background-color: white;
     border-bottom: 1px solid #F5F5F5;
