--- a/views/applyNewContacter.html
+++ b/views/applyNewContacter.html
@@ -7,7 +7,7 @@
           content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1"/>
     <link rel="stylesheet" href="/css/bootstrapChange.min.css"/>
     <link rel="stylesheet" href="/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="/css/contacter-applynew.css"/>
+    <link rel="stylesheet" href="/css/contacter.css"/>
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <title>申请联络员</title>
@@ -34,9 +34,8 @@
             <span>申请人信息 :</span>
         </div>
         <div class="col-xs-14 text-left fish-contacter-user-info-content">
-            <p>王小军</p>
-
-            <p>3636363636666564160</p>
+            <p id="username">王小军</p>
+            <p id="userid">3636363636666564160</p>
         </div>
     </div>
     <div class="row fish-margin-top">
@@ -60,7 +59,7 @@
             <span>详细地址<i>*</i></span>
         </div>
         <div class="col-xs-14">
-            <input class="fish-apply-input col-xs-20" placeholder="请输入你的详细居住地址"/>
+            <input class="fish-apply-input col-xs-20" required="required" placeholder="请输入你的详细居住地址"/>
         </div>
     </div>
     <div class="row fish-contacter-row">
@@ -68,7 +67,7 @@
             <span>公司/职业<i>*</i></span>
         </div>
         <div class="col-xs-14">
-            <input class="fish-apply-input  col-xs-20" placeholder="向其他联络员介绍你自己"/>
+            <input class="fish-apply-input  col-xs-20" required="required" placeholder="向其他联络员介绍你自己"/>
         </div>
     </div>
 
@@ -104,7 +103,7 @@
     </div>
     <div class="row ">
         <div class="col-xs-20 text-center fish-margin-vertical">
-            <i class="fa fa-check-circle-o fish-contacter-icon-correct" aria-hidden="true"></i>
+            <i class="fa fa-check-circle-o fish-contacter-icon-correct fish-icon" aria-hidden="true"></i>
             <span>本人已阅读，并同意《联络员的职责与权限》</span>
         </div>
     </div>
