--- a/views/statusWaiting.html
+++ b/views/statusWaiting.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
           content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/bootstrapChange.min.css"/>
     <link rel="stylesheet" href="/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="/css/contacter.css"/>
     <script type="text/javascript" src="/js/jquery.min.js"></script>
@@ -28,8 +28,8 @@
 </header>
 <!--申请信息-->
 <div class="container-fluid">
-    <div class="row ">
-        <div class="col-xs-10 col-xs-offset-1 text-center fish-apply-statusbg">
+    <div class="row">
+        <div class="col-xs-18 col-xs-offset-1 text-center fish-apply-statusbg fish-margin-top">
             <img class="img-responsive  fish-icon fish-icon-success" src="/images/icon-loading.png"/>
 
             <p>您的申请已提交 审核中</p>
