--- a/views/contacterHomepage.html
+++ b/views/contacterHomepage.html
@@ -28,11 +28,19 @@
 </header>
 <!--主体-->
 <div class="container-fluid">
-    <img src="/images/member-bg.png" data-rel="" alt="" class="img-responsive "/>
-    <div class="row">
-        <div class="col-xs-14 col-xs-offset-1">
+    <div class="row fish-home-background">
+        <div class="col-xs-4 col-xs-offset-1 fish-back">
             <img src="/images/icon-portrait-03.png" class="img-responsive" />
-
+        </div>
+        <div class="col-xs-6 fish-back">
+           <h3 id="username">王小军</h3>
+            <p id="userarea">浙江&nbsp杭州</p>
+            <span id="date">2016.04.06</span>
+        </div>
+        <div class="col-xs-5 col-xs-offset-4 fish-back ">
+            <h4>总贡献</h4>
+            <h4>月贡献</h4>
+            <i class="glyphicon glyphicon-menu-right" aria-hidden="true"></i>
         </div>
     </div>
 </div>
