--- a/views/applyNewContacter.html
+++ b/views/applyNewContacter.html
@@ -85,7 +85,7 @@
                     <span>所属俱乐部</span>
                 </div>
                 <div class="col-xs-11 text-right ">
-                    <input class="fish-apply-input col-xs-20" placeholder=""/>
+                    <input class="fish-apply-input form-control input-lg col-xs-20" placeholder=""/>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
             </div>
         </div>
     </div>
-    <div class="row ">
+    <div class="row">
         <div class="col-xs-20 text-center fish-margin-vertical">
             <i class="fa fa-check-circle-o fish-contacter-icon-correct fish-icon" aria-hidden="true"></i>
             <span>本人已阅读，并同意《联络员的职责与权限》</span>
