--- a/views/contacterhomeContributions.html
+++ b/views/contacterhomeContributions.html
@@ -75,7 +75,7 @@
             <li class="col-xs-5">
                 <strong>申报钓点</strong>
             </li>
-            <li class="col-xs-5 col-xs-offset-1 text-left fish-greycolor-icon">
+            <li class="col-xs-6 text-right fish-greycolor-icon">
                 <span>上传 </span><span>221个</span>
             </li>
             <li class="col-xs-5 text-right fish-greycolor-icon">
@@ -104,7 +104,7 @@
             <li class="col-xs-5">
                 <strong>申报咨询</strong>
             </li>
-            <li class="col-xs-5 col-xs-offset-1 text-left fish-greycolor-icon">
+            <li class="col-xs-6 text-right fish-greycolor-icon">
                 <span>上传 </span><span>212篇</span>
             </li>
             <li class="col-xs-5 text-right fish-greycolor-icon">
