--- a/views/contacterHomepage.html
+++ b/views/contacterHomepage.html
@@ -131,7 +131,7 @@
                         <li><span>566</span></li>
                     </ul>
                 </div>
-                <div class="col-xs-4 text-center fish-home-ranking-userinfo">
+                <div class="col-xs-6 text-center fish-home-ranking-userinfo">
                     <ul class="list-unstyled">
                         <li><h3>排名</h3></li>
                         <li><span>26</span></li>
@@ -156,7 +156,7 @@
                         <li><span>566</span></li>
                     </ul>
                 </div>
-                <div class="col-xs-4 text-center fish-home-ranking-userinfo fish-ranking-numcolor1">
+                <div class="col-xs-6 text-center fish-home-ranking-userinfo fish-ranking-numcolor1">
                     <p>1</p>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                         <li><span>566</span></li>
                     </ul>
                 </div>
-                <div class="col-xs-4 text-center fish-home-ranking-userinfo fish-ranking-numcolor2">
+                <div class="col-xs-6 text-center fish-home-ranking-userinfo fish-ranking-numcolor2">
                     <p>2</p>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                         <li><span>566</span></li>
                     </ul>
                 </div>
-                <div class="col-xs-4 text-center fish-home-ranking-userinfo fish-ranking-numcolor3">
+                <div class="col-xs-6 text-center fish-home-ranking-userinfo fish-ranking-numcolor3">
                     <p>3</p>
                 </div>
             </div>
@@ -222,7 +222,7 @@
                         <li><span>566</span></li>
                     </ul>
                 </div>
-                <div class="col-xs-4 text-center fish-home-ranking-userinfo fish-ranking-numcolornormal">
+                <div class="col-xs-6 text-center fish-home-ranking-userinfo fish-ranking-numcolornormal">
                     <p>4</p>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                         <li><span>566</span></li>
                     </ul>
                 </div>
-                <div class="col-xs-4 text-center fish-home-ranking-userinfo fish-ranking-numcolornormal">
+                <div class="col-xs-6 text-center fish-home-ranking-userinfo fish-ranking-numcolornormal">
                     <p>5</p>
                 </div>
             </div>
@@ -533,7 +533,7 @@
         <div class="container-fluid">
             <div class="row fish-home-monthranking">
                 <div class="col-xs-20 fish-contacter-row text-center">
-                    <h6>联络员服务地区预备会员量排行榜</h6>
+                    <h6>联络员服务地区已签约商户数量排行榜</h6>
                 </div>
             </div>
         </div>
@@ -669,12 +669,12 @@
     </div>
 </div>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="fish-bottom-empty">
+<!--<div class="container-fluid">-->
+    <!--<div class="row">-->
+        <!--<div class="fish-bottom-empty">-->
 
-        </div>
-    </div>
-</div>
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 </body>
 </html>
